# Autonomous-Literatre-Survey

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  80e5500cb33b_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  citation_explorer.py  graph.py  ieee_formatter.py  query_strategist.py  survey_architect.py
backend/app/api/: __init__.py  deps.py  surveys.py  websocket.py
backend/app/api/v1/: __init__.py  auth.py  chat.py  health.py  papers.py  surveys.py
backend/app/core/: exceptions.py  logging.py  oauth.py  security.py
backend/app/models/: __init__.py  paper.py  survey.py  user.py
backend/app/schemas/: __init__.py  auth.py  paper.py  survey.py
backend/app/services/: __init__.py  auth_service.py  cache_service.py  embedding_service.py  llm_service.py  pinecone_service.py  redis_service.py  survey_service.py  vector_store.py
backend/app/websocket/: chat.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_security.py  test_surveys.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/hooks/: useSurveyChat.js  useWebSocket.ts
frontend/src/pages/: Home.jsx  LoginPage.tsx  NewSurvey.jsx  OAuthCallback.tsx  SurveyDetail.jsx  SurveyDetailPage.tsx  SurveyListPage.tsx
frontend/src/services/: api.js  api.ts  endpoints.ts
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
infrastructure/: alb.tf  ecs.tf  main.tf  networking.tf  outputs.tf  rds.tf  redis.tf  variables.tf
infrastructure/terraform/: main.tf  modules.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+15 files in other folders)
